force-app/main/default/objects/Routing_Form_Field__c/Routing_Form_Field__c.object-meta.xml
<CustomObject>
    <description>A question field in a routing form</description>
    <label>Routing Form Field</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>