force-app/main/default/objects/Routing_Form_Field__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>Select</fullName><default>false</default><label>Select</label></value>
            <value><fullName>MultiSelect</fullName><default>false</default><label>Multi-Select</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>