force-app/main/default/objects/Routing_Form_Field__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>